
Introduction
------------
Apache Solr is an open source enterprise search server based on the Apache Lucene Java
search library, with XML/HTTP and JSON APIs, hit highlighting, faceted search,
caching, replication, and a web administration interface.

See http://lucene.apache.org/solr for more information.

================= FullStory ================

* SOLR-8697: Scope ZK election nodes by session to prevent elections from interfering with each other
  and other small LeaderElector improvements. (Scott Blum via Mark Miller)
* SOLR-8696: Start the Overseer before actions that need the overseer on init and when reconnecting after
  zk expiration and improve init logic. (Scott Blum, Mark Miller)
* SOLR-8695: Ensure ZK watchers are not triggering our watch logic on connection events and
  make this handling more consistent. (Scott Blum via Mark Miller)
* SOLR-8694: DistributedMap/Queue can create too many Watchers and some code simplification. (Scott Blum via Mark Miller)
* SOLR-8693: Improve ZkStateReader logging. (Scott Blum via Mark Miller)
* SOLR-8605: Regular expression queries starting with escaped forward slash caused an exception. (Scott Blum, yonik)
* Remove pathological error reporting. Don't serialize the entire clusterstate to log.
* SOLR-7090(unmerged): Cross node join - FullJoinQParserPlugin (Scott Blum)
* Disable flaky test (FullStory)
* Reduced the minimum length required for trailing wildcards on the surround query parser. (Bruce Johnson)
* add jolokia jars to solr war (Ian Rose)

==================  5.4.1 ==================

Bug Fixes
----------------------

* SOLR-8460: /analysis/field could throw exceptions for custom attributes. (David Smiley, Uwe Schindler)

* SOLR-8373: KerberosPlugin: Using multiple nodes on same machine leads clients to
  fetch TGT for every request (Ishan Chattopadhyaya via noble)

* SOLR-8059: &debug=results for distributed search when distrib.singlePass (sometimes activated